pkg/gateway/xds/translator/testdata/out/xds-ir/jwt-multi-route-multi-provider.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route-www.test.com
      route:
        cluster: first-route-www.test.com-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/first-route-www.test.com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: first-route-www.test.com
    - match:
        path: foo/baz
      name: second-route-www.test.com
      route:
        cluster: second-route-www.test.com-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/second-route-www.test.com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: second-route-www.test.com
